# RS-Club

./: .gitignore  README.md  ccc.py  keep_awake.py  m_redstar.py  main.py  notes  o_redstar.py  params.py  params_rs.py  player.py  pyproject.toml  queue_manager.py  redstar.py
rs/: RS10.txt  RS11.txt  RS4.txt  RS5.txt  RS6.txt  RS7.txt  RS8.txt  RS9.txt  completed_queues.txt  rs10.txt  rs11.txt  rs4.txt  rs5.txt  rs6.txt  rs7.txt  rs8.txt  rs9.txt
rs/old/: m_redstar.py
