[tool.poetry]
name = "rsclub"
version = "0.1.0"
description = ""
authors = ["Groeli&Zofia"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
jsonpickle = "^1.5.1"
flatten-json = "^0.1.8"
params = "^0.9.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
